<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dashboard">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.rummypulse.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.example.rummypulse.ui.dashboard.DashboardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_reports"
        android:name="com.example.rummypulse.ui.reports.ReportsFragment"
        android:label="@string/menu_reports"
        tools:layout="@layout/fragment_reports" />

    <fragment
        android:id="@+id/nav_player_consolidation"
        android:name="com.example.rummypulse.ui.playerconsolidation.PlayerConsolidationFragment"
        android:label="@string/menu_player_consolidation"
        tools:layout="@layout/fragment_player_consolidation" />

    <fragment
        android:id="@+id/nav_user_management"
        android:name="com.example.rummypulse.ui.usermanagement.UserManagementFragment"
        android:label="Users"
        tools:layout="@layout/fragment_user_management" />

    <fragment
        android:id="@+id/nav_game_defaults"
        android:name="com.example.rummypulse.ui.gamedefaults.GameDefaultsFragment"
        android:label="@string/menu_game_defaults"
        tools:layout="@layout/fragment_game_defaults" />
</navigation>
