<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_games_dashboard"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_reports"
            android:title="@string/menu_reports" />
        <item
            android:id="@+id/nav_user_management"
            android:icon="@drawable/ic_people"
            android:title="Users" />
    </group>

    <item
        android:id="@+id/nav_voice_settings"
        android:icon="@drawable/ic_voice"
        android:title="Announcements" />
    
    <item
        android:id="@+id/nav_app_info"
        android:icon="@drawable/ic_info"
        android:title="App Info" />
    
    <item
        android:id="@+id/nav_sign_out"
        android:icon="@drawable/ic_sign_out"
        android:title="Sign Out" />
</menu>